k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulnshield
  labels:
    app.kubernetes.io/name: vulnshield
    app.kubernetes.io/part-of: vulnshield-platform
